--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <main>
-      <div class="successtoster appear">
+      <div class="successtoster" id="toster">
         <div class="toster-heading">
           <img src="/assets/images/icon-success-check.svg" alt="success mark" />
           <p>Message Sent!</p>
@@ -106,6 +106,7 @@
                 name=""
                 id="message"
                 class="input full-width"
+                minlength="12"
                 required
               ></textarea>
               <p class="error"></p>
