trying to debugicons not showing

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main>
       <div class="successtoster" id="toster">
         <div class="toster-heading">
-          <img src="/assets/images/icon-success-check.svg" alt="success mark" />
+          <img src="./assets/images/icon-success-check.svg" alt="success mark" />
           <p>Message Sent!</p>
         </div>
         <div class="toseter-message">
@@ -117,6 +117,7 @@
                 <label for="term-agree"
                   >I consent to being contacted by the team<span class="astrick"
                     >*</span></label>
+
               </div>
               <p class="error" id="term-error"></p>
             </div>
